# chatgpt-cli

./: .envrc  .gitignore  LICENSE  README.md  chatgpt  chatgpt.py  flake.nix  pyproject.toml  requirements.txt
ai/: copilot.py  env.py  moa.py  models.py  openai.py  phind.py  util.py
ai/history/: abstract.py  file_cache.py
scripts/: __chatgpt_shell_integration.fish  chatgpt.fish  get_copilot_token.py
scripts/assets/: screencast.webm
