[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "poetry-core>=1.0.0"]

[tool.poetry]
name = "chatgpt-cli"
version = "1.2.0"
description = "CLI tool for chat-based GPT models"
authors = ["THOUSAND-SKY <g4gossi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0"
requests = "^2.31.0"
openai = "^1.13.3"
rxpy = "^0.1.0"
appdirs = "^1.4.4"
anthropic = "^0.19.1"
