[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "chatgpt"
version = "1.3.0"
description = "CLI tool for chat-based GPT models"
authors = ["THOUSAND-SKY <g4gossi@gmail.com>"]

[tool.poetry.scripts]
get-token = "scripts.get_copilot_token:getToken"
app = "chatgpt:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
openai = "^1.13.3"
appdirs = "^1.4.4"
anthropic = "^0.19.1"
pyautogen = "^0.2.17"
reactivex = "^4.0.4"
groq = "^0.8.0"
google-generativeai = "^0.8.3"
grpcio = "1.60.1"
numpy = "^1"
